[gd_scene load_steps=7 format=2]

[ext_resource path="res://prefabs/Items/Item.tscn" type="PackedScene" id=1]
[ext_resource path="res://prefabs/UI/ItemContext_Equip.tscn" type="PackedScene" id=2]
[ext_resource path="res://Scripts/Items/Handaxe.gd" type="Script" id=3]
[ext_resource path="res://models/objects/axe.obj" type="ArrayMesh" id=4]
[ext_resource path="res://prefabs/UI/ItemContext_Description.tscn" type="PackedScene" id=5]

[sub_resource type="BoxShape" id=1]
extents = Vector3( 0.44472, 1, 0.120543 )

[node name="Handaxe" type="RigidBody"]

[node name="CollisionShape2" type="CollisionShape" parent="."]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, -0.180809, 0.0844971, 0 )
shape = SubResource( 1 )

[node name="Item" parent="." instance=ExtResource( 1 )]
script = ExtResource( 3 )
icon = "res://Sprites/Items/Axe_Icon.png"
itemName = "Handaxe"

[node name="Item_Mesh" parent="Item" index="0"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, -1.17381, 0 )
mesh = ExtResource( 4 )
material/1 = null

[node name="Description" parent="Item/Context" index="0" instance=ExtResource( 5 )]
description = "A sturdy hatchet that can be thrown and chop down trees. It is quite reliable."

[node name="Equip" parent="Item/Context" index="1" instance=ExtResource( 2 )]
visible = false

[node name="ThrowDuration" type="Timer" parent="Item"]
wait_time = 0.5
one_shot = true

[node name="CollisionShape3" type="CollisionShape" parent="Item"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, -0.180809, 0.0844971, 0 )
shape = SubResource( 1 )
[connection signal="body_entered" from="Item" to="Item" method="_on_Item_body_entered"]
[connection signal="timeout" from="Item/ThrowDuration" to="Item" method="_on_ThrowDuration_timeout"]

[editable path="Item"]

[editable path="Item/Context"]
